updated to clazzfish 3.0